--- a/tcm/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
@@ -86,8 +86,7 @@
                                 Investment Amount </label>
 
                             <div class="EmptyBox5"></div>
-                            <pe:inputNumber id="initialfund"
-                                            styleClass="invInputText input_investwid1 amountBRmobileSupport mobileFullWidthinput"
+                            <pe:inputNumber styleClass="invInputText input_investwid1 amountBRmobileSupport mobileFullWidthinput"
                                             value="#{tdcto.tdMasterData.initialInvestment}"
                                             maxlength="11" symbol="$"
                                             decimalPlaces="2"
@@ -341,8 +340,7 @@
                             </label>
 
                             <div class="EmptyBox5"></div>
-                            <pe:inputNumber id="initialfund"
-                                            styleClass="invInputText input_investwid1 amountBRmobileSupport mobileFullWidthinput"
+                            <pe:inputNumber styleClass="invInputText input_investwid1 amountBRmobileSupport mobileFullWidthinput"
                                             value="#{tdcto.tdMasterData.electroicBankDetail.tranAmount}"
                                             maxlength="8" symbol="$"
                                             decimalPlaces="2"
