--- a/tcm/modules/web/src/main/webapp/pages/custody/td/regulatory.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/regulatory.xhtml
@@ -26,7 +26,7 @@
                     </div>
 
 
-                    <p:panel id="ownerspfPanel" style="border: 0px; background: transparent"
+                    <p:panel style="border: 0px; background: transparent"
                              rendered="#{tdcto.tdMasterData.ownerSPF}">
                         <div class="EmptyBox20"></div>
                         <div class="Container100">
@@ -92,7 +92,7 @@
                         </p:selectBooleanCheckbox>
                     </div>
 
-                    <p:panel id="ownerspfPanel" style="border: 0px; background: transparent"
+                    <p:panel style="border: 0px; background: transparent"
                              rendered="#{tdcto.tdMasterData.ownerShare}">
                         <div class="EmptyBox20"></div>
                         <div class="Container100">
