--- a/tcm/modules/web/src/main/webapp/pages/custody/td/accttype.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/accttype.xhtml
@@ -12,13 +12,13 @@
 
         <p:selectOneRadio id="acctTypeRadio" value="#{tdcto.tdMasterData.accttype}" layout="custom"
                 required="true" requiredMessage="Must select one of these account type!">
-            <f:selectItem itemLabel="Individual" itemValue="Individual" />
-            <f:selectItem itemLabel="Joint" itemValue="Joint" />
-            <f:selectItem itemLabel="UGMA" itemValue="UGMA" />
-            <f:selectItem itemLabel="Traditional IRA" itemValue="Traditional IRA" />
-            <f:selectItem itemLabel="ROTH" itemValue="ROTH" />
-            <f:selectItem itemLabel="Rollover IRA" itemValue="Rollover IRA" />
-            <f:selectItem itemLabel="Beneficiary IRA" itemValue="Beneficiary IRA" />
+            <f:selectItem itemLabel="Individual" itemValue="1" />
+            <f:selectItem itemLabel="Joint" itemValue="2" />
+            <f:selectItem itemLabel="UGMA" itemValue="3" />
+            <f:selectItem itemLabel="Traditional IRA" itemValue="4" />
+            <f:selectItem itemLabel="ROTH" itemValue="5" />
+            <f:selectItem itemLabel="Rollover IRA" itemValue="6" />
+            <f:selectItem itemLabel="Beneficiary IRA" itemValue="7" />
         </p:selectOneRadio>
 
         <div class="EmptyBox10"></div>
