Committing TCM Project- Prakash Lal

--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p4.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p4.xhtml
@@ -26,8 +26,7 @@
                          style="border: 0px; background: transparent;">
                     <p:commandLink action="#{tcmpb.riskSelected(1)}"
                                    update=":ceForm:inputArea, :ceForm:riskimgpanel">
-                        <img src="#{tcmpb.getRiskGraphic(1)}"
-                             class="riskImage"/>
+                        <img src="#{tcmpb.getRiskGraphic(1)}" class="riskImage"/>
                     </p:commandLink>
 
                     <p:commandLink action="#{tcmpb.riskSelected(2)}"
