--- a/tcm/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
@@ -9,7 +9,7 @@
 
         <p:tab title="Fund">
             <p:panel id="fundPanel" style="border: 0px; background: transparent">
-                <div class="Container80 Responsive100 MarTop5 MarCenter ui-color"
+                <div class="Container100 Responsive100 MarTop5 MarCenter ui-color"
                      style="margin-bottom: 15px; border: 0px; background: transparent">
 
                     <p:selectOneRadio id="fundRadio" value="#{tdcto.tdMasterData.fundType}" layout="custom"
@@ -97,10 +97,10 @@
                     </div>
                 </div>
 
+                <!-- ACH -->
                <p:panel id="achPanel" style="border: 0px; background: transparent"
                        rendered="#{tdcto.tdMasterData.fundType == 1}">
                    <div class="EmptyBox20"></div>
-                   <!-- ACH -->
                    <div class="Container100">
                        <div class="Container45 Fleft CustomWidthFA-Responsive">
                            <label Class="Container100"
@@ -114,8 +114,7 @@
                                         placeholder="Bank Name">
                            </p:inputText>
                        </div>
-                       <div
-                               class="Container45 Fright-FAAddress CustomWidthFA-Responsive">
+                       <div class="Container45 Fright-FAAddress CustomWidthFA-Responsive">
                            <label Class="Container100"
                                   style="text-align: left !important; font-weight: bold !important;">
                                Account Type</label>
@@ -167,9 +166,9 @@
 
                </p:panel>
 
+                <!-- ACAT -->
                 <p:panel id="acatPanel" style="border: 0px; background: transparent"
                          rendered="#{tdcto.tdMasterData.fundType == 2}">
-                    <!-- ACAT -->
                     <div class="EmptyBox20"></div>
                     <div class="Container100">
                         <div class="Container45 Fleft CustomWidthFA-Responsive">
@@ -226,62 +225,62 @@
 
                 </p:panel>
 
+                <!-- Wire transfer -->
                 <p:panel id="wirePanel" style="border: 0px; background: transparent"
                          rendered="#{tdcto.tdMasterData.fundType == 3}">
+                    <div class="EmptyBox20"></div>
+                    <h3 class="FSResponsiveFA">Domestic Wire Information</h3>
+
+                    <div class="EmptyBox10"></div>
+                    <div class="Container100">
+                        <div class="Container45 Fleft CustomWidthFA-Responsive">
+                            <label Class="Container100"
+                                   style="text-align: left !important; font-weight: bold !important;">
+                                Receiving Bank Name</label>
+
+                            <div class="EmptyBox5"></div>
+                            <p:inputText styleClass="Wid100 FS14 CustomWidthFA-Responsive"
+                                         value="#{tdcto.tdMasterData.fedwireAcctDetail.wireBankName}"
+                                         placeholder="Receiving Bank Name">
+                            </p:inputText>
+                        </div>
+                        <div
+                                class="Container45 Fright-FAAddress CustomWidthFA-Responsive">
+                            <label Class="Container100"
+                                   style="text-align: left !important; font-weight: bold !important;">
+                                Name on Receiving Bank Account</label>
+
+                            <div class="EmptyBox5"></div>
+                            <p:inputText styleClass="Wid100 FS14 CustomWidthFA-Responsive"
+                                         placeholder="Name on Receiving Bank Account">
+                            </p:inputText>
+                        </div>
+                    </div>
+                    <div class="EmptyBox20"></div>
+                    <div class="Container100">
+                        <div class="Container45 Fleft CustomWidthFA-Responsive">
+                            <label Class="Container100"
+                                   style="text-align: left !important; font-weight: bold !important;">
+                                ABA Routing Number</label>
+
+                            <div class="EmptyBox5"></div>
+                            <p:inputText styleClass="Wid100 FS14 CustomWidthFA-Responsive"
+                                         placeholder="ABA Routing Number">
+                            </p:inputText>
+                        </div>
+                        <div
+                                class="Container45 Fright-FAAddress CustomWidthFA-Responsive">
+                            <label Class="Container100"
+                                   style="text-align: left !important; font-weight: bold !important;">
+                                Bank Account Number</label>
+
+                            <div class="EmptyBox5"></div>
+                            <p:inputText styleClass="Wid100 FS14 CustomWidthFA-Responsive"
+                                         placeholder="Bank Account Number">
+                            </p:inputText>
+                        </div>
+                    </div>
                 </p:panel>
-                <!-- Wire transfer -->
-                <div class="EmptyBox20"></div>
-                <h3 class="FSResponsiveFA">Domestic Wire Information</h3>
-
-                <div class="EmptyBox10"></div>
-                <div class="Container100">
-                    <div class="Container45 Fleft CustomWidthFA-Responsive">
-                        <label Class="Container100"
-                               style="text-align: left !important; font-weight: bold !important;">
-                            Receiving Bank Name</label>
-
-                        <div class="EmptyBox5"></div>
-                        <p:inputText styleClass="Wid100 FS14 CustomWidthFA-Responsive"
-                                     value="#{tdcto.tdMasterData.fedwireAcctDetail.wireBankName}"
-                                     placeholder="Receiving Bank Name">
-                        </p:inputText>
-                    </div>
-                    <div
-                            class="Container45 Fright-FAAddress CustomWidthFA-Responsive">
-                        <label Class="Container100"
-                               style="text-align: left !important; font-weight: bold !important;">
-                            Name on Receiving Bank Account</label>
-
-                        <div class="EmptyBox5"></div>
-                        <p:inputText styleClass="Wid100 FS14 CustomWidthFA-Responsive"
-                                     placeholder="Name on Receiving Bank Account">
-                        </p:inputText>
-                    </div>
-                </div>
-                <div class="EmptyBox20"></div>
-                <div class="Container100">
-                    <div class="Container45 Fleft CustomWidthFA-Responsive">
-                        <label Class="Container100"
-                               style="text-align: left !important; font-weight: bold !important;">
-                            ABA Routing Number</label>
-
-                        <div class="EmptyBox5"></div>
-                        <p:inputText styleClass="Wid100 FS14 CustomWidthFA-Responsive"
-                                     placeholder="ABA Routing Number">
-                        </p:inputText>
-                    </div>
-                    <div
-                            class="Container45 Fright-FAAddress CustomWidthFA-Responsive">
-                        <label Class="Container100"
-                               style="text-align: left !important; font-weight: bold !important;">
-                            Bank Account Number</label>
-
-                        <div class="EmptyBox5"></div>
-                        <p:inputText styleClass="Wid100 FS14 CustomWidthFA-Responsive"
-                                     placeholder="Bank Account Number">
-                        </p:inputText>
-                    </div>
-                </div>
 
             </p:panel>
 
