--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p1.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p1.xhtml
@@ -59,13 +59,29 @@
                                             required="true" requiredMessage="Age is required!"
                                             validatorMessage="Age should be between 18 and 100."/>
 
-                            <div class="mobileFullWidth"><h3 class="formFS"> years old.</h3></div>
+                            <div class="mobileFullWidth"><h3 class="formFS"> years old and I am
+                                <p:selectBooleanButton value="#{tcmpb.riskCalculator.retired}"
+                                        onLabel="retired" offLabel="NOT retired">
+                                    <p:ajax listener="#{tcmpb.onGoalChangeValue}"
+                                            update=":ceForm:p1hrznpanel"/>
+                                </p:selectBooleanButton>.
+                            </h3></div>
                         </div>
                     </div>
                     <div class="EmptyBox20"></div>
                     <div class="TexAlCenter">
                         <div>
-                            <div class="mobileFullWidth"><h3 class="formFS"> I would like to retire when I am </h3></div>
+                            <ui:fragment rendered="#{tcmpb.riskCalculator.retired}">
+                                <div class="mobileFullWidth">
+                                    <h3 class="formFS"> I would like to retire when I am </h3>
+                                </div>
+                            </ui:fragment>
+                            <ui:fragment rendered="#{! tcmpb.riskCalculator.retired}">
+                                <div class="mobileFullWidth">
+                                    <h3 class="formFS"> I would like to invest till when I am </h3>
+                                </div>
+                            </ui:fragment>
+
                             <pe:inputNumber id="retireageID"
                                             styleClass="invInputText input_wid1 amountBRmobileSupport mobileFullWidthinput"
                                             style="width: 60px;"
@@ -130,11 +146,18 @@
                          </p:commandLink>
          </div>         
     <div style="display: none;">
-    <img src="#{tcmpb.getRiskGraphic(1)}"/>
-    <img src="#{tcmpb.getRiskGraphic(2)}"/>
-    <img src="#{tcmpb.getRiskGraphic(3)}"/>
-    <img src="#{tcmpb.getRiskGraphic(4)}"/>
-    <img src="#{tcmpb.getRiskGraphic(5)}"/>
+       <img src="/javax.faces.resource/images/gl.png.xhtml?ln=tcm"/>
+       <img src="/javax.faces.resource/images/gl.png.xhtml?ln=tcm"/>
+       <img src="/javax.faces.resource/images/gl.png.xhtml?ln=tcm"/>
+       <img src="/javax.faces.resource/images/gl.png.xhtml?ln=tcm"/>
+       <img src="/javax.faces.resource/images/gl.png.xhtml?ln=tcm"/>
+
+        <img src="/javax.faces.resource/images/sgl.png.xhtml?ln=tcm"/>
+        <img src="/javax.faces.resource/images/sgl.png.xhtml?ln=tcm"/>
+        <img src="/javax.faces.resource/images/sgl.png.xhtml?ln=tcm"/>
+        <img src="/javax.faces.resource/images/sgl.png.xhtml?ln=tcm"/>
+        <img src="/javax.faces.resource/images/sgl.png.xhtml?ln=tcm"/>
+
     </div>
     </div>
 
